--- a/public/stylesheets/chapter.css
+++ b/public/stylesheets/chapter.css
@@ -7217,7 +7217,12 @@ a.th {
   max-width: 800px;
 }
 
-/* line 1, ../sass/_global.scss */
+/* line 2, ../sass/_global.scss */
+.clf {
+  clear: both;
+}
+
+/* line 5, ../sass/_global.scss */
 span.shadow {
   display: block;
   position: absolute;
@@ -7226,7 +7231,7 @@ span.shadow {
   right: 0;
   bottom: 0;
 }
-/* line 8, ../sass/_global.scss */
+/* line 12, ../sass/_global.scss */
 span.shadow.shadow-left {
   right: 100%;
   top: 0;
@@ -7235,7 +7240,7 @@ span.shadow.shadow-left {
   background-image: url("/img/shadow-left.png");
   background-size: 10px 100% !important;
 }
-/* line 16, ../sass/_global.scss */
+/* line 20, ../sass/_global.scss */
 span.shadow.shadow-bottom {
   top: 100%;
   left: 4%;
@@ -7244,7 +7249,7 @@ span.shadow.shadow-bottom {
   background-image: url("/img/shadow-bottom.png");
   background-size: 100% 18px !important;
 }
-/* line 24, ../sass/_global.scss */
+/* line 28, ../sass/_global.scss */
 span.shadow.shadow-right {
   top: 0;
   left: 100%;
@@ -7254,44 +7259,44 @@ span.shadow.shadow-right {
   background-size: 10px 100% !important;
 }
 
-/* line 34, ../sass/_global.scss */
+/* line 38, ../sass/_global.scss */
 .top-bar {
   height: 75px;
   padding: 30px 0 0 0;
 }
-/* line 37, ../sass/_global.scss */
+/* line 41, ../sass/_global.scss */
 .top-bar.expanded {
   padding: 0;
 }
-/* line 39, ../sass/_global.scss */
+/* line 43, ../sass/_global.scss */
 .top-bar.expanded .name {
   bottom: 0;
 }
-/* line 43, ../sass/_global.scss */
+/* line 47, ../sass/_global.scss */
 .top-bar .name {
   float: left;
   position: relative;
   bottom: 10px;
 }
-/* line 47, ../sass/_global.scss */
+/* line 51, ../sass/_global.scss */
 .top-bar .name h1 {
   padding: 0 25px;
 }
-/* line 49, ../sass/_global.scss */
+/* line 53, ../sass/_global.scss */
 .top-bar .name h1 a {
   width: auto;
 }
-/* line 53, ../sass/_global.scss */
+/* line 57, ../sass/_global.scss */
 .top-bar .name .logo {
   width: 36px;
   height: 36px;
 }
-/* line 59, ../sass/_global.scss */
+/* line 63, ../sass/_global.scss */
 .top-bar ul.title-area li.actions {
   float: left;
   margin-top: 10px;
 }
-/* line 62, ../sass/_global.scss */
+/* line 66, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar {
   display: inline;
   margin-right: 25px;
@@ -7299,86 +7304,86 @@ span.shadow.shadow-right {
   width: auto;
   height: auto;
 }
-/* line 68, ../sass/_global.scss */
+/* line 72, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li {
   float: left;
 }
-/* line 70, ../sass/_global.scss */
+/* line 74, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton) {
   color: #2b2b2b;
   padding: 10px 15px;
 }
-/* line 74, ../sass/_global.scss */
+/* line 78, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton):hover {
   color: #F8F8F8;
   background-color: #69bed7;
 }
 
-/* line 85, ../sass/_global.scss */
+/* line 89, ../sass/_global.scss */
 .top-bar-section ul {
   background: #F8F8F8;
 }
-/* line 87, ../sass/_global.scss */
+/* line 91, ../sass/_global.scss */
 .top-bar-section ul li {
   border-right: 1px solid #f8f8f8;
 }
-/* line 89, ../sass/_global.scss */
+/* line 93, ../sass/_global.scss */
 .top-bar-section ul li.split {
   border-left: 1px solid #ccc;
 }
-/* line 92, ../sass/_global.scss */
+/* line 96, ../sass/_global.scss */
 .top-bar-section ul li a {
   background: #F8F8F8;
 }
-/* line 94, ../sass/_global.scss */
+/* line 98, ../sass/_global.scss */
 .top-bar-section ul li a i {
   margin: 0 5px;
 }
-/* line 98, ../sass/_global.scss */
+/* line 102, ../sass/_global.scss */
 .top-bar-section ul li a:not(.botton) {
   padding: 0 35px;
 }
 @media screen and (max-width: 1024px) {
-  /* line 102, ../sass/_global.scss */
+  /* line 106, ../sass/_global.scss */
   .top-bar-section ul li a:not(.botton) {
     padding: 0px 20px;
   }
 }
-/* line 106, ../sass/_global.scss */
+/* line 110, ../sass/_global.scss */
 .top-bar-section ul li a:not(.button):hover, .top-bar-section ul li a.active {
   color: #F8F8F8;
   background-color: #69bed7;
 }
-/* line 111, ../sass/_global.scss */
+/* line 115, ../sass/_global.scss */
 .top-bar-section ul li .avatar {
   cursor: pointer;
 }
-/* line 113, ../sass/_global.scss */
+/* line 117, ../sass/_global.scss */
 .top-bar-section ul li .avatar span {
   margin: 0 8px;
 }
-/* line 116, ../sass/_global.scss */
+/* line 120, ../sass/_global.scss */
 .top-bar-section ul li .avatar i {
   font-size: 20px;
   position: relative;
   top: 2px;
 }
-/* line 121, ../sass/_global.scss */
+/* line 125, ../sass/_global.scss */
 .top-bar-section ul li .avatar img {
   width: 26px;
   height: 26px;
   border: 1px solid #b4b9c1;
   border-radius: 2px;
 }
-/* line 129, ../sass/_global.scss */
+/* line 133, ../sass/_global.scss */
 .top-bar-section ul li .avatar:hover img {
   border-color: #5ebbc2;
 }
-/* line 137, ../sass/_global.scss */
+/* line 141, ../sass/_global.scss */
 .top-bar-section ul.right li {
   margin-right: 24px;
 }
-/* line 139, ../sass/_global.scss */
+/* line 143, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown {
   display: none;
   background: none;
@@ -7388,7 +7393,7 @@ span.shadow.shadow-right {
   right: 30px;
   z-index: 2013;
 }
-/* line 147, ../sass/_global.scss */
+/* line 151, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li {
   margin: 0 0 0 10px;
   padding: 0 25px 0 80px;
@@ -7396,7 +7401,7 @@ span.shadow.shadow-right {
   background-color: white;
   float: none;
 }
-/* line 154, ../sass/_global.scss */
+/* line 158, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li a {
   margin: 0;
   padding: 10px 0;
@@ -7404,36 +7409,36 @@ span.shadow.shadow-right {
   line-height: 20px;
   color: #584f4f;
 }
-/* line 161, ../sass/_global.scss */
+/* line 165, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li a:hover {
   color: #1491ad;
 }
-/* line 166, ../sass/_global.scss */
+/* line 170, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal i {
   position: absolute;
   margin-left: -30px;
   margin-top: 3px;
 }
-/* line 173, ../sass/_global.scss */
+/* line 177, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover {
   background-color: #69bed7;
   color: #F8F8F8;
 }
-/* line 176, ../sass/_global.scss */
+/* line 180, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover a {
   color: #F8F8F8;
 }
-/* line 180, ../sass/_global.scss */
+/* line 184, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.split {
   padding: 0;
   border-bottom: 1px dotted #e9e9e9;
 }
-/* line 184, ../sass/_global.scss */
+/* line 188, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top {
   padding: 5px 5px 0 80px;
   height: 74px;
 }
-/* line 188, ../sass/_global.scss */
+/* line 192, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top img {
   position: absolute;
   left: 15px;
@@ -7441,23 +7446,23 @@ span.shadow.shadow-right {
   width: 64px;
   height: 64px;
 }
-/* line 195, ../sass/_global.scss */
+/* line 199, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span {
   display: block;
   width: 180px;
 }
-/* line 200, ../sass/_global.scss */
+/* line 204, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-name {
   color: #1491ad;
   line-height: 25px;
   padding-top: 5px;
 }
-/* line 205, ../sass/_global.scss */
+/* line 209, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-email {
   font-size: 14px;
   color: gray;
 }
-/* line 210, ../sass/_global.scss */
+/* line 214, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown span.arrow {
   display: block;
   position: absolute;
@@ -7552,22 +7557,102 @@ body .post-page-wrapper {
   padding-top: 120px;
 }
 /* line 84, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments {
+  position: relative;
+  margin-top: 40px;
+  background-color: #f9f9f7;
+  width: 100%;
+  border-top: 1px solid #dededc;
+}
+/* line 90, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .header {
+  width: 100%;
+  position: absolute;
+  top: -19px;
+  height: 34px;
+  text-align: center;
+}
+/* line 96, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .header span {
+  display: inline-block;
+  height: 34px;
+  line-height: 32px;
+  padding: 0 13px;
+  background: #fff;
+  font-size: 12px;
+  font-weight: normal;
+  letter-spacing: .2em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #b3b3b1;
+  border: 1px solid #dededc;
+}
+/* line 111, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .comment-list {
+  max-width: 700px;
+  margin: auto;
+  margin-top: 40px;
+}
+/* line 115, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .comment-list .comment-body {
+  position: relative;
+}
+/* line 117, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .comment-list .comment-body .comment-user {
+  position: absolute;
+  width: 40px;
+  left: 0;
+  top: 0;
+}
+/* line 122, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .comment-list .comment-body .comment-user img {
+  border-radius: 40px;
+}
+/* line 126, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .comment-list .comment-body .comment-text {
+  margin-left: 70px;
+  padding: 10px;
+  background-color: white;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 3px -1px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 3px -1px;
+  box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 3px -1px;
+  border: 1px solid #efefef;
+  font-size: 14px;
+}
+/* line 127, ../sass/chapter.scss */
+body .post-page-wrapper .post-comments .comment-list .comment-body .comment-text .arrow {
+  float: left;
+  position: absolute;
+  top: 4px;
+  left: 55px;
+  width: 20px;
+  height: 20px;
+  clip: rect(1px 19px 28px 0);
+  background-color: white;
+  -webkit-transform: rotate(45deg) translate(5px, -5px);
+  -moz-transform: rotate(45deg) translate(5px, -5px);
+  -ms-transform: rotate(45deg) translate(5px, -5px);
+  -o-transform: rotate(45deg) translate(5px, -5px);
+  transform: rotate(45deg) translate(5px, -5px);
+  border: 1px solid #efefef;
+}
+/* line 150, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner {
   max-width: 700px;
   margin: 0 auto;
 }
-/* line 87, ../sass/chapter.scss */
+/* line 153, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner h1 {
   margin-bottom: 0.3em;
 }
-/* line 90, ../sass/chapter.scss */
+/* line 156, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner span.time {
   display: block;
   width: 100%;
   margin-bottom: 1em;
   color: #b3b3b1;
 }
-/* line 96, ../sass/chapter.scss */
+/* line 162, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author {
   position: relative;
   width: 160px;
@@ -7575,24 +7660,24 @@ body .post-page-wrapper .post-page-inner .author {
   float: left;
   text-align: right;
 }
-/* line 102, ../sass/chapter.scss */
+/* line 168, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author img {
   width: 70px;
   height: 70px;
   border-radius: 70px;
   margin-bottom: 10px;
 }
-/* line 108, ../sass/chapter.scss */
+/* line 174, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author a {
   color: #333332;
   line-height: 1.2;
   font-weight: bold;
 }
-/* line 112, ../sass/chapter.scss */
+/* line 178, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author a:hover {
   color: #5ebbc2;
 }
-/* line 116, ../sass/chapter.scss */
+/* line 182, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author .publish-time {
   padding: 0;
   padding-top: 10px;
@@ -7602,7 +7687,7 @@ body .post-page-wrapper .post-page-inner .author .publish-time {
   font-size: 14px;
   margin-top: 40px;
 }
-/* line 125, ../sass/chapter.scss */
+/* line 191, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author .publish-time:before {
   content: '';
   width: 40px;
@@ -7612,41 +7697,105 @@ body .post-page-wrapper .post-page-inner .author .publish-time:before {
   top: 0;
   right: 0;
 }
-/* line 134, ../sass/chapter.scss */
+/* line 200, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .author .publish-time strong {
   color: #333332;
   font-size: 14px;
 }
-/* line 142, ../sass/chapter.scss */
+/* line 207, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner span.comments {
+  display: block;
+  margin: 0 300px 0 0;
+  border-bottom: 2px solid #5ebbc2;
+}
+/* line 212, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand {
+  position: relative;
+}
+/* line 214, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand .before {
+  content: '';
+  width: 40px;
+  height: 2px;
+  background: #dededc;
+  position: absolute;
+  top: -30px;
+  left: 0;
+  margin-bottom: 20px;
+}
+/* line 224, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand .small-round {
+  font-size: 14px;
+  border-radius: 3px;
+  -webkit-box-shadow: white 0 0 0 0;
+  -moz-box-shadow: white 0 0 0 0;
+  box-shadow: white 0 0 0 0;
+}
+/* line 229, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand button {
+  float: left;
+}
+/* line 232, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand .recommand-votes {
+  position: relative;
+  float: left;
+  padding-left: 11px;
+}
+/* line 236, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand .recommand-votes .vote-inner {
+  padding: 12px 10px 11px;
+  font-size: 12px;
+  min-width: 17px;
+  border: 1px solid #dededc;
+  border-radius: 4px;
+}
+/* line 243, ../sass/chapter.scss */
+body .post-page-wrapper .post-page-inner .recommand .recommand-votes .vote-arrow {
+  left: 0;
+  top: 50%;
+  position: absolute;
+  border: 1px solid #dededc;
+  -webkit-transform: rotate(45deg) translate(5px, -5px);
+  -moz-transform: rotate(45deg) translate(5px, -5px);
+  -ms-transform: rotate(45deg) translate(5px, -5px);
+  -o-transform: rotate(45deg) translate(5px, -5px);
+  transform: rotate(45deg) translate(5px, -5px);
+  background-color: white;
+  margin-top: -5px;
+  width: 8px;
+  height: 8px;
+  clip: rect(1px 7px 18px 0);
+}
+/* line 261, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body h1 {
   margin: 0.1em 0 1.6em 0;
   font-size: 2em;
 }
-/* line 146, ../sass/chapter.scss */
+/* line 265, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body h2 {
   margin: 0.1em 0 1.6em 0;
   font-size: 1.6em;
 }
-/* line 150, ../sass/chapter.scss */
+/* line 269, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body h3 {
   margin: 0.1em 0 1.5em 0;
   font-size: 1.2em;
 }
-/* line 154, ../sass/chapter.scss */
+/* line 273, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body h4 {
   font-size: 1em;
 }
-/* line 157, ../sass/chapter.scss */
+/* line 276, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body span.time {
   float: right;
   margin: 0.6em 0;
 }
-/* line 161, ../sass/chapter.scss */
+/* line 280, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body p, body .post-page-wrapper .post-page-inner .body pre {
   font-size: 1em;
   margin-bottom: 1.5em;
 }
-/* line 165, ../sass/chapter.scss */
+/* line 284, ../sass/chapter.scss */
 body .post-page-wrapper .post-page-inner .body ul {
   list-style: none;
 }
