--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7217,7 +7217,12 @@ a.th {
   max-width: 800px;
 }
 
-/* line 1, ../sass/_global.scss */
+/* line 2, ../sass/_global.scss */
+.clf {
+  clear: both;
+}
+
+/* line 5, ../sass/_global.scss */
 span.shadow {
   display: block;
   position: absolute;
@@ -7226,7 +7231,7 @@ span.shadow {
   right: 0;
   bottom: 0;
 }
-/* line 8, ../sass/_global.scss */
+/* line 12, ../sass/_global.scss */
 span.shadow.shadow-left {
   right: 100%;
   top: 0;
@@ -7235,7 +7240,7 @@ span.shadow.shadow-left {
   background-image: url("/img/shadow-left.png");
   background-size: 10px 100% !important;
 }
-/* line 16, ../sass/_global.scss */
+/* line 20, ../sass/_global.scss */
 span.shadow.shadow-bottom {
   top: 100%;
   left: 4%;
@@ -7244,7 +7249,7 @@ span.shadow.shadow-bottom {
   background-image: url("/img/shadow-bottom.png");
   background-size: 100% 18px !important;
 }
-/* line 24, ../sass/_global.scss */
+/* line 28, ../sass/_global.scss */
 span.shadow.shadow-right {
   top: 0;
   left: 100%;
@@ -7254,44 +7259,44 @@ span.shadow.shadow-right {
   background-size: 10px 100% !important;
 }
 
-/* line 34, ../sass/_global.scss */
+/* line 38, ../sass/_global.scss */
 .top-bar {
   height: 75px;
   padding: 30px 0 0 0;
 }
-/* line 37, ../sass/_global.scss */
+/* line 41, ../sass/_global.scss */
 .top-bar.expanded {
   padding: 0;
 }
-/* line 39, ../sass/_global.scss */
+/* line 43, ../sass/_global.scss */
 .top-bar.expanded .name {
   bottom: 0;
 }
-/* line 43, ../sass/_global.scss */
+/* line 47, ../sass/_global.scss */
 .top-bar .name {
   float: left;
   position: relative;
   bottom: 10px;
 }
-/* line 47, ../sass/_global.scss */
+/* line 51, ../sass/_global.scss */
 .top-bar .name h1 {
   padding: 0 25px;
 }
-/* line 49, ../sass/_global.scss */
+/* line 53, ../sass/_global.scss */
 .top-bar .name h1 a {
   width: auto;
 }
-/* line 53, ../sass/_global.scss */
+/* line 57, ../sass/_global.scss */
 .top-bar .name .logo {
   width: 36px;
   height: 36px;
 }
-/* line 59, ../sass/_global.scss */
+/* line 63, ../sass/_global.scss */
 .top-bar ul.title-area li.actions {
   float: left;
   margin-top: 10px;
 }
-/* line 62, ../sass/_global.scss */
+/* line 66, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar {
   display: inline;
   margin-right: 25px;
@@ -7299,86 +7304,86 @@ span.shadow.shadow-right {
   width: auto;
   height: auto;
 }
-/* line 68, ../sass/_global.scss */
+/* line 72, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li {
   float: left;
 }
-/* line 70, ../sass/_global.scss */
+/* line 74, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton) {
   color: #2b2b2b;
   padding: 10px 15px;
 }
-/* line 74, ../sass/_global.scss */
+/* line 78, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton):hover {
   color: #F8F8F8;
   background-color: #69bed7;
 }
 
-/* line 85, ../sass/_global.scss */
+/* line 89, ../sass/_global.scss */
 .top-bar-section ul {
   background: #F8F8F8;
 }
-/* line 87, ../sass/_global.scss */
+/* line 91, ../sass/_global.scss */
 .top-bar-section ul li {
   border-right: 1px solid #f8f8f8;
 }
-/* line 89, ../sass/_global.scss */
+/* line 93, ../sass/_global.scss */
 .top-bar-section ul li.split {
   border-left: 1px solid #ccc;
 }
-/* line 92, ../sass/_global.scss */
+/* line 96, ../sass/_global.scss */
 .top-bar-section ul li a {
   background: #F8F8F8;
 }
-/* line 94, ../sass/_global.scss */
+/* line 98, ../sass/_global.scss */
 .top-bar-section ul li a i {
   margin: 0 5px;
 }
-/* line 98, ../sass/_global.scss */
+/* line 102, ../sass/_global.scss */
 .top-bar-section ul li a:not(.botton) {
   padding: 0 35px;
 }
 @media screen and (max-width: 1024px) {
-  /* line 102, ../sass/_global.scss */
+  /* line 106, ../sass/_global.scss */
   .top-bar-section ul li a:not(.botton) {
     padding: 0px 20px;
   }
 }
-/* line 106, ../sass/_global.scss */
+/* line 110, ../sass/_global.scss */
 .top-bar-section ul li a:not(.button):hover, .top-bar-section ul li a.active {
   color: #F8F8F8;
   background-color: #69bed7;
 }
-/* line 111, ../sass/_global.scss */
+/* line 115, ../sass/_global.scss */
 .top-bar-section ul li .avatar {
   cursor: pointer;
 }
-/* line 113, ../sass/_global.scss */
+/* line 117, ../sass/_global.scss */
 .top-bar-section ul li .avatar span {
   margin: 0 8px;
 }
-/* line 116, ../sass/_global.scss */
+/* line 120, ../sass/_global.scss */
 .top-bar-section ul li .avatar i {
   font-size: 20px;
   position: relative;
   top: 2px;
 }
-/* line 121, ../sass/_global.scss */
+/* line 125, ../sass/_global.scss */
 .top-bar-section ul li .avatar img {
   width: 26px;
   height: 26px;
   border: 1px solid #b4b9c1;
   border-radius: 2px;
 }
-/* line 129, ../sass/_global.scss */
+/* line 133, ../sass/_global.scss */
 .top-bar-section ul li .avatar:hover img {
   border-color: #5ebbc2;
 }
-/* line 137, ../sass/_global.scss */
+/* line 141, ../sass/_global.scss */
 .top-bar-section ul.right li {
   margin-right: 24px;
 }
-/* line 139, ../sass/_global.scss */
+/* line 143, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown {
   display: none;
   background: none;
@@ -7388,7 +7393,7 @@ span.shadow.shadow-right {
   right: 30px;
   z-index: 2013;
 }
-/* line 147, ../sass/_global.scss */
+/* line 151, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li {
   margin: 0 0 0 10px;
   padding: 0 25px 0 80px;
@@ -7396,7 +7401,7 @@ span.shadow.shadow-right {
   background-color: white;
   float: none;
 }
-/* line 154, ../sass/_global.scss */
+/* line 158, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li a {
   margin: 0;
   padding: 10px 0;
@@ -7404,36 +7409,36 @@ span.shadow.shadow-right {
   line-height: 20px;
   color: #584f4f;
 }
-/* line 161, ../sass/_global.scss */
+/* line 165, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li a:hover {
   color: #1491ad;
 }
-/* line 166, ../sass/_global.scss */
+/* line 170, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal i {
   position: absolute;
   margin-left: -30px;
   margin-top: 3px;
 }
-/* line 173, ../sass/_global.scss */
+/* line 177, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover {
   background-color: #69bed7;
   color: #F8F8F8;
 }
-/* line 176, ../sass/_global.scss */
+/* line 180, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover a {
   color: #F8F8F8;
 }
-/* line 180, ../sass/_global.scss */
+/* line 184, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.split {
   padding: 0;
   border-bottom: 1px dotted #e9e9e9;
 }
-/* line 184, ../sass/_global.scss */
+/* line 188, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top {
   padding: 5px 5px 0 80px;
   height: 74px;
 }
-/* line 188, ../sass/_global.scss */
+/* line 192, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top img {
   position: absolute;
   left: 15px;
@@ -7441,23 +7446,23 @@ span.shadow.shadow-right {
   width: 64px;
   height: 64px;
 }
-/* line 195, ../sass/_global.scss */
+/* line 199, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span {
   display: block;
   width: 180px;
 }
-/* line 200, ../sass/_global.scss */
+/* line 204, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-name {
   color: #1491ad;
   line-height: 25px;
   padding-top: 5px;
 }
-/* line 205, ../sass/_global.scss */
+/* line 209, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-email {
   font-size: 14px;
   color: gray;
 }
-/* line 210, ../sass/_global.scss */
+/* line 214, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown span.arrow {
   display: block;
   position: absolute;
@@ -7657,34 +7662,34 @@ section.main .chapter .markdown h1, section.main .chapter .markdown h2, section.
 section.main .chapter .markdown ul, section.main .chapter .markdown ul > li {
   list-style: none;
 }
-/* line 206, ../sass/app.scss */
+/* line 208, ../sass/app.scss */
 section.main ul.users {
   list-style: none;
 }
-/* line 208, ../sass/app.scss */
+/* line 210, ../sass/app.scss */
 section.main ul.users li {
   margin: 12px 0;
 }
-/* line 210, ../sass/app.scss */
+/* line 212, ../sass/app.scss */
 section.main ul.users li img {
   border-radius: 25px;
   border: 5px solid white;
 }
-/* line 214, ../sass/app.scss */
+/* line 216, ../sass/app.scss */
 section.main ul.users li img.stranger {
   border-color: rgba(128, 128, 128, 0.5);
 }
-/* line 217, ../sass/app.scss */
+/* line 219, ../sass/app.scss */
 section.main ul.users li img.friend {
   border-color: rgba(93, 164, 35, 0.5);
 }
-/* line 221, ../sass/app.scss */
+/* line 223, ../sass/app.scss */
 section.main ul.users li a {
   color: #808080;
   padding-left: 12px;
   font-size: 0.9em;
 }
-/* line 227, ../sass/app.scss */
+/* line 229, ../sass/app.scss */
 section.main ul.users li:hover img {
   border-radius: 20px;
   border: none;
@@ -7695,25 +7700,25 @@ section.main ul.users li:hover img {
   transform: scale(1.2, 1.2);
   margin: 5px;
 }
-/* line 233, ../sass/app.scss */
+/* line 235, ../sass/app.scss */
 section.main ul.users li:hover a {
   color: #565656;
 }
-/* line 239, ../sass/app.scss */
+/* line 241, ../sass/app.scss */
 section.main .row {
   max-width: 100%;
   padding: 0 10px;
 }
-/* line 242, ../sass/app.scss */
+/* line 244, ../sass/app.scss */
 section.main .row.full {
   padding: 0;
 }
-/* line 246, ../sass/app.scss */
+/* line 248, ../sass/app.scss */
 section.main .editor {
   resize: none;
   line-height: 155%;
 }
-/* line 251, ../sass/app.scss */
+/* line 253, ../sass/app.scss */
 section.main .preview {
   background-color: white;
   overflow-y: scroll;
@@ -7721,53 +7726,53 @@ section.main .preview {
   font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   position: relative;
 }
-/* line 258, ../sass/app.scss */
+/* line 260, ../sass/app.scss */
 section.main .preview .inner {
   position: relative;
 }
-/* line 260, ../sass/app.scss */
+/* line 262, ../sass/app.scss */
 section.main .preview .inner * {
   position: relative;
 }
-/* line 264, ../sass/app.scss */
+/* line 266, ../sass/app.scss */
 section.main .preview h1 {
   font-size: 2em;
 }
-/* line 267, ../sass/app.scss */
+/* line 269, ../sass/app.scss */
 section.main .preview h2 {
   font-size: 1.5em;
 }
 
-/* line 272, ../sass/app.scss */
+/* line 274, ../sass/app.scss */
 .helper {
   position: absolute;
   height: 0;
   top: -100px;
 }
 
-/* line 279, ../sass/app.scss */
+/* line 281, ../sass/app.scss */
 .login-panel {
   width: 100%;
   margin-top: 20%;
   background-color: #F8F8F8;
 }
-/* line 283, ../sass/app.scss */
+/* line 285, ../sass/app.scss */
 .login-panel h3 {
   color: #444444;
   margin-bottom: 25px;
 }
-/* line 287, ../sass/app.scss */
+/* line 289, ../sass/app.scss */
 .login-panel .logins {
   margin: 10px 40px;
   text-align: center;
   height: 120px;
 }
-/* line 292, ../sass/app.scss */
+/* line 294, ../sass/app.scss */
 .login-panel .join {
   font-weight: normal;
   margin: 0 20px;
 }
-/* line 296, ../sass/app.scss */
+/* line 298, ../sass/app.scss */
 .login-panel .footline {
   height: 60px;
   margin: 2px;
@@ -7776,17 +7781,17 @@ section.main .preview h2 {
   border-bottom: 2px solid #f8f8f8;
   font-weight: normal;
 }
-/* line 303, ../sass/app.scss */
+/* line 305, ../sass/app.scss */
 .login-panel .footline a {
   font-weight: bold;
 }
-/* line 307, ../sass/app.scss */
+/* line 309, ../sass/app.scss */
 .login-panel .recommand {
   margin: 30px 60px;
   border-top: 1px solid #ccc;
   text-align: center;
 }
-/* line 311, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .login-panel .recommand span {
   background-color: #f8f8f8;
   position: absolute;
@@ -7796,20 +7801,20 @@ section.main .preview h2 {
   top: 20px;
   padding: 0 10px;
 }
-/* line 323, ../sass/app.scss */
+/* line 325, ../sass/app.scss */
 .login-panel .form form {
   padding: 0px 30px;
   border-right: 2px solid #dbdbdb;
 }
-/* line 326, ../sass/app.scss */
+/* line 328, ../sass/app.scss */
 .login-panel .form form input {
   margin-bottom: 25px;
 }
-/* line 332, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .login-panel .title {
   height: 40px;
 }
-/* line 335, ../sass/app.scss */
+/* line 337, ../sass/app.scss */
 .login-panel .title .close {
   display: block;
   width: 30px;
@@ -7822,11 +7827,11 @@ section.main .preview h2 {
   float: right;
   background-color: black;
 }
-/* line 347, ../sass/app.scss */
+/* line 349, ../sass/app.scss */
 .login-panel .title .close a {
   color: white;
 }
-/* line 350, ../sass/app.scss */
+/* line 352, ../sass/app.scss */
 .login-panel .title .close:hover {
   background-color: #3e3e3e;
 }
