--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7217,12 +7217,21 @@ a.th {
   max-width: 800px;
 }
 
-/* line 2, ../sass/_global.scss */
+/* line 1, ../sass/_global.scss */
+.small-round {
+  font-size: 14px;
+  border-radius: 3px;
+  -webkit-box-shadow: white 0 0 0 0;
+  -moz-box-shadow: white 0 0 0 0;
+  box-shadow: white 0 0 0 0;
+}
+
+/* line 6, ../sass/_global.scss */
 .clf {
   clear: both;
 }
 
-/* line 5, ../sass/_global.scss */
+/* line 9, ../sass/_global.scss */
 span.shadow {
   display: block;
   position: absolute;
@@ -7231,7 +7240,7 @@ span.shadow {
   right: 0;
   bottom: 0;
 }
-/* line 12, ../sass/_global.scss */
+/* line 16, ../sass/_global.scss */
 span.shadow.shadow-left {
   right: 100%;
   top: 0;
@@ -7240,7 +7249,7 @@ span.shadow.shadow-left {
   background-image: url("/img/shadow-left.png");
   background-size: 10px 100% !important;
 }
-/* line 20, ../sass/_global.scss */
+/* line 24, ../sass/_global.scss */
 span.shadow.shadow-bottom {
   top: 100%;
   left: 4%;
@@ -7249,7 +7258,7 @@ span.shadow.shadow-bottom {
   background-image: url("/img/shadow-bottom.png");
   background-size: 100% 18px !important;
 }
-/* line 28, ../sass/_global.scss */
+/* line 32, ../sass/_global.scss */
 span.shadow.shadow-right {
   top: 0;
   left: 100%;
@@ -7259,44 +7268,44 @@ span.shadow.shadow-right {
   background-size: 10px 100% !important;
 }
 
-/* line 38, ../sass/_global.scss */
+/* line 42, ../sass/_global.scss */
 .top-bar {
   height: 75px;
   padding: 30px 0 0 0;
 }
-/* line 41, ../sass/_global.scss */
+/* line 45, ../sass/_global.scss */
 .top-bar.expanded {
   padding: 0;
 }
-/* line 43, ../sass/_global.scss */
+/* line 47, ../sass/_global.scss */
 .top-bar.expanded .name {
   bottom: 0;
 }
-/* line 47, ../sass/_global.scss */
+/* line 51, ../sass/_global.scss */
 .top-bar .name {
   float: left;
   position: relative;
   bottom: 10px;
 }
-/* line 51, ../sass/_global.scss */
+/* line 55, ../sass/_global.scss */
 .top-bar .name h1 {
   padding: 0 25px;
 }
-/* line 53, ../sass/_global.scss */
+/* line 57, ../sass/_global.scss */
 .top-bar .name h1 a {
   width: auto;
 }
-/* line 57, ../sass/_global.scss */
+/* line 61, ../sass/_global.scss */
 .top-bar .name .logo {
   width: 36px;
   height: 36px;
 }
-/* line 63, ../sass/_global.scss */
+/* line 67, ../sass/_global.scss */
 .top-bar ul.title-area li.actions {
   float: left;
   margin-top: 10px;
 }
-/* line 66, ../sass/_global.scss */
+/* line 70, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar {
   display: inline;
   margin-right: 25px;
@@ -7304,86 +7313,86 @@ span.shadow.shadow-right {
   width: auto;
   height: auto;
 }
-/* line 72, ../sass/_global.scss */
+/* line 76, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li {
   float: left;
 }
-/* line 74, ../sass/_global.scss */
+/* line 78, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton) {
   color: #2b2b2b;
   padding: 10px 15px;
 }
-/* line 78, ../sass/_global.scss */
+/* line 82, ../sass/_global.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton):hover {
   color: #F8F8F8;
   background-color: #69bed7;
 }
 
-/* line 89, ../sass/_global.scss */
+/* line 93, ../sass/_global.scss */
 .top-bar-section ul {
   background: #F8F8F8;
 }
-/* line 91, ../sass/_global.scss */
+/* line 95, ../sass/_global.scss */
 .top-bar-section ul li {
   border-right: 1px solid #f8f8f8;
 }
-/* line 93, ../sass/_global.scss */
+/* line 97, ../sass/_global.scss */
 .top-bar-section ul li.split {
   border-left: 1px solid #ccc;
 }
-/* line 96, ../sass/_global.scss */
+/* line 100, ../sass/_global.scss */
 .top-bar-section ul li a {
   background: #F8F8F8;
 }
-/* line 98, ../sass/_global.scss */
+/* line 102, ../sass/_global.scss */
 .top-bar-section ul li a i {
   margin: 0 5px;
 }
-/* line 102, ../sass/_global.scss */
+/* line 106, ../sass/_global.scss */
 .top-bar-section ul li a:not(.botton) {
   padding: 0 35px;
 }
 @media screen and (max-width: 1024px) {
-  /* line 106, ../sass/_global.scss */
+  /* line 110, ../sass/_global.scss */
   .top-bar-section ul li a:not(.botton) {
     padding: 0px 20px;
   }
 }
-/* line 110, ../sass/_global.scss */
+/* line 114, ../sass/_global.scss */
 .top-bar-section ul li a:not(.button):hover, .top-bar-section ul li a.active {
   color: #F8F8F8;
   background-color: #69bed7;
 }
-/* line 115, ../sass/_global.scss */
+/* line 119, ../sass/_global.scss */
 .top-bar-section ul li .avatar {
   cursor: pointer;
 }
-/* line 117, ../sass/_global.scss */
+/* line 121, ../sass/_global.scss */
 .top-bar-section ul li .avatar span {
   margin: 0 8px;
 }
-/* line 120, ../sass/_global.scss */
+/* line 124, ../sass/_global.scss */
 .top-bar-section ul li .avatar i {
   font-size: 20px;
   position: relative;
   top: 2px;
 }
-/* line 125, ../sass/_global.scss */
+/* line 129, ../sass/_global.scss */
 .top-bar-section ul li .avatar img {
   width: 26px;
   height: 26px;
   border: 1px solid #b4b9c1;
   border-radius: 2px;
 }
-/* line 133, ../sass/_global.scss */
+/* line 137, ../sass/_global.scss */
 .top-bar-section ul li .avatar:hover img {
   border-color: #5ebbc2;
 }
-/* line 141, ../sass/_global.scss */
+/* line 145, ../sass/_global.scss */
 .top-bar-section ul.right li {
   margin-right: 24px;
 }
-/* line 143, ../sass/_global.scss */
+/* line 147, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown {
   display: none;
   background: none;
@@ -7393,7 +7402,7 @@ span.shadow.shadow-right {
   right: 30px;
   z-index: 2013;
 }
-/* line 151, ../sass/_global.scss */
+/* line 155, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li {
   margin: 0 0 0 10px;
   padding: 0 25px 0 80px;
@@ -7401,7 +7410,7 @@ span.shadow.shadow-right {
   background-color: white;
   float: none;
 }
-/* line 158, ../sass/_global.scss */
+/* line 162, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li a {
   margin: 0;
   padding: 10px 0;
@@ -7409,36 +7418,36 @@ span.shadow.shadow-right {
   line-height: 20px;
   color: #584f4f;
 }
-/* line 165, ../sass/_global.scss */
+/* line 169, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li a:hover {
   color: #1491ad;
 }
-/* line 170, ../sass/_global.scss */
+/* line 174, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal i {
   position: absolute;
   margin-left: -30px;
   margin-top: 3px;
 }
-/* line 177, ../sass/_global.scss */
+/* line 181, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover {
   background-color: #69bed7;
   color: #F8F8F8;
 }
-/* line 180, ../sass/_global.scss */
+/* line 184, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover a {
   color: #F8F8F8;
 }
-/* line 184, ../sass/_global.scss */
+/* line 188, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.split {
   padding: 0;
   border-bottom: 1px dotted #e9e9e9;
 }
-/* line 188, ../sass/_global.scss */
+/* line 192, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top {
   padding: 5px 5px 0 80px;
   height: 74px;
 }
-/* line 192, ../sass/_global.scss */
+/* line 196, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top img {
   position: absolute;
   left: 15px;
@@ -7446,23 +7455,23 @@ span.shadow.shadow-right {
   width: 64px;
   height: 64px;
 }
-/* line 199, ../sass/_global.scss */
+/* line 203, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span {
   display: block;
   width: 180px;
 }
-/* line 204, ../sass/_global.scss */
+/* line 208, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-name {
   color: #1491ad;
   line-height: 25px;
   padding-top: 5px;
 }
-/* line 209, ../sass/_global.scss */
+/* line 213, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-email {
   font-size: 14px;
   color: gray;
 }
-/* line 214, ../sass/_global.scss */
+/* line 218, ../sass/_global.scss */
 .top-bar-section ul.right li ul.action-dropdown span.arrow {
   display: block;
   position: absolute;
